fixing missing color

--- a/still-alive.yaml
+++ b/still-alive.yaml
@@ -1,17 +1,18 @@
 scheme: "Still Alive"
 author: "Derrick McKee (derrick.mckee@gmail.com)"
-base01: "#DDE6EA"
-base02: "#C4C1C7"
-base03: "#A5BFCD"
-base04: "#7398BA"
-base05: "#63839C"
-base06: "#426395"
-base07: "#E6BC95"
-base08: "#D99687"
-base09: "#E4BF25"
-base0A: "#B4AC24"
-base0B: "#D99687"
-base0C: "#956E49"
-base0D: "#DF4142"
-base0E: "#956E49"
+base00: "#DDE6EA"
+base01: "#C4C1C7"
+base02: "#A5BFCD"
+base03: "#7398BA"
+base04: "#63839C"
+base05: "#426395"
+base06: "#E6BC95"
+base07: "#D99687"
+base08: "#E4BF25"
+base09: "#B4AC24"
+base0A: "#D99687"
+base0B: "#956E49"
+base0C: "#DF4142"
+base0D: "#956E49"
+base0E: "#2C3C57"
 base0F: "#140C0D"
