changing order and removing dups

--- a/still-alive.yaml
+++ b/still-alive.yaml
@@ -1,18 +1,18 @@
 scheme: "Still Alive"
 author: "Derrick McKee (derrick.mckee@gmail.com)"
 base00: "#DDE6EA"
-base01: "#C4C1C7"
-base02: "#A5BFCD"
+base01: "#A5BFCD"
+base02: "#C4C1C7"
 base03: "#7398BA"
 base04: "#63839C"
-base05: "#426395"
-base06: "#E6BC95"
-base07: "#D99687"
-base08: "#E4BF25"
-base09: "#B4AC24"
-base0A: "#D99687"
-base0B: "#956E49"
-base0C: "#DF4142"
-base0D: "#956E49"
+base05: "#E6BC95"
+base06: "#D99687"
+base07: "#E4BF25"
+base08: "#B4AC24"
+base09: "#DF4142"
+base0A: "#956E49"
+base0B: "#426395"
+base0C: "#456077"
+base0D: "#5C5C6A"
 base0E: "#2C3C57"
 base0F: "#140C0D"
