--- a/still-alive.yaml
+++ b/still-alive.yaml
@@ -1,15 +1,15 @@
 scheme: "Still Alive"
 author: "Derrick McKee (derrick.mckee@gmail.com)"
-base00: "#DDE6EA"
+base00: "#fcfeff"
 base01: "#A5BFCD"
 base02: "#C4C1C7"
 base03: "#7398BA"
-base04: "#63839C"
-base05: "#E6BC95"
+base04: "#E6BC95"
+base05: "#DF4142"
 base06: "#D99687"
 base07: "#E4BF25"
 base08: "#B4AC24"
-base09: "#DF4142"
+base09: "#63839C"
 base0A: "#956E49"
 base0B: "#426395"
 base0C: "#456077"
