--- a/still-alive.yaml
+++ b/still-alive.yaml
@@ -1,6 +1,6 @@
 scheme: "Still Alive"
 author: "Derrick McKee (derrick.mckee@gmail.com)"
-base00: "#fcfbf7"
+base00: "#FCFBF7"
 base01: "#A5BFCD"
 base02: "#C4C1C7"
 base03: "#7398BA"
