--- a/still-alive.yaml
+++ b/still-alive.yaml
@@ -1,18 +1,18 @@
 scheme: "Still Alive"
 author: "Derrick McKee (derrick.mckee@gmail.com)"
-base00: "#FCFBF7"
-base01: "#A5BFCD"
-base02: "#C4C1C7"
-base03: "#7398BA"
-base04: "#E6BC95"
-base05: "#DF4142"
-base06: "#D99687"
-base07: "#E4BF25"
-base08: "#B4AC24"
-base09: "#63839C"
-base0A: "#956E49"
-base0B: "#426395"
-base0C: "#456077"
-base0D: "#5C5C6A"
-base0E: "#2C3C57"
+base00: "#F0F0F0"
+base01: "#F0D848"
+base02: "#FFF018"
+base03: "#F01818"
+base04: "#F00000"
+base05: "#D80000"
+base06: "#489000"
+base07: "#30A860"
+base08: "#487830"
+base0A: "#426395"
+base09: "#183048"
+base0B: "#5C5C6A"
+base0C: "#2C3C57"
+base0D: "#001878"
+base0E: "#900000"
 base0F: "#140C0D"
