improving color scheme

--- a/still-alive.yaml
+++ b/still-alive.yaml
@@ -1,18 +1,18 @@
 scheme: "Still Alive"
 author: "Derrick McKee (derrick.mckee@gmail.com)"
-base00: "#F0F0F0"
-base01: "#F0D848"
-base02: "#FFF018"
-base03: "#F01818"
-base04: "#F00000"
-base05: "#D80000"
-base06: "#489000"
-base07: "#30A860"
-base08: "#487830"
-base0A: "#426395"
-base09: "#183048"
-base0B: "#5C5C6A"
-base0C: "#2C3C57"
-base0D: "#001878"
-base0E: "#900000"
-base0F: "#140C0D"
+base00: "#f4eef2"
+base01: "#d4dfe8"
+base02: "#82bad8"
+base03: "#5882ab"
+base04: "#425f7a"
+base05: "#223965"
+base06: "#1d3b66"
+base07: "#233648"
+base08: "#ae270d"
+base09: "#e18e29"
+base0A: "#249f11"
+base0B: "#f30100"
+base0C: "#c5a074"
+base0D: "#d25914"
+base0E: "#150e06"
+base0F: "#a475ac"
