adding more yellow

--- a/still-alive.yaml
+++ b/still-alive.yaml
@@ -9,10 +9,10 @@ base05: "#223965"
 base06: "#1d3b66"
 base07: "#233648"
 base08: "#ae270d"
-base09: "#e18e29"
+base09: "#fdbb1e"
 base0A: "#249f11"
 base0B: "#f30100"
 base0C: "#c5a074"
-base0D: "#d25914"
+base0D: "#f4800f"
 base0E: "#150e06"
 base0F: "#a475ac"
