--- a/still-alive.yaml
+++ b/still-alive.yaml
@@ -1,5 +1,5 @@
 scheme: "Still Alive"
-author: "Derrick McKee (derrick.mckee@gmail.com)"
+author: "Derrick McKee (derrick@geth.systems)"
 base00: "#f4eef2"
 base01: "#d4dfe8"
 base02: "#82bad8"
