--- a/still-alive.yaml
+++ b/still-alive.yaml
@@ -1,18 +1,18 @@
 scheme: "Still Alive"
 author: "Derrick McKee (derrick@geth.systems)"
-base00: "#f4eef2"
-base01: "#d4dfe8"
-base02: "#82bad8"
-base03: "#5882ab"
-base04: "#425f7a"
-base05: "#223965"
-base06: "#1d3b66"
-base07: "#233648"
-base08: "#ae270d"
-base09: "#fdbb1e"
-base0A: "#249f11"
-base0B: "#f30100"
-base0C: "#c5a074"
-base0D: "#f4800f"
-base0E: "#150e06"
-base0F: "#a475ac"
+base00: "F4EEF2"
+base01: "D4DFE8"
+base02: "82BAD8"
+base03: "5882AB"
+base04: "425F7A"
+base05: "223965"
+base06: "1D3B66"
+base07: "233648"
+base08: "AE270D"
+base09: "FDBB1E"
+base0A: "249F11"
+base0B: "F30100"
+base0C: "C5A074"
+base0D: "F4800F"
+base0E: "150E06"
+base0F: "A475AC"
